Do not install gmock and gtest. Add tests executable to install folder.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,15 @@ FetchContent_Declare(
 set(gtest_force_shared_crt
     ON
     CACHE BOOL "" FORCE)
+
+set(BUILD_GMOCK
+    OFF
+    CACHE BOOL "" FORCE)
+
+set(INSTALL_GTEST
+    OFF
+    CACHE BOOL "" FORCE)
+
 FetchContent_MakeAvailable(googletest)
 
 set(SOURCES # cmake-format: sort
@@ -22,3 +31,5 @@ target_link_libraries(run_tests cascade GTest::gtest_main)
 
 include(GoogleTest)
 gtest_discover_tests(run_tests)
+
+install(TARGETS run_tests RUNTIME DESTINATION bin)
