--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
         run: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -B build
 
       - name: Configure CMake for Windows
-        if: matrix.os == 'ubuntu-latest' && matrix.compiler == 'gcc'
+        if: matrix.os == 'windows-latest'
         run: cmake -DCMAKE_BUILD_TYPE=Release -B build
 
       - name: Build
