--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,13 @@ jobs:
 
       - name: Configure CMake for Windows + clang
         if: matrix.os == 'windows-latest' && matrix.compiler == 'clang'
-        run: cmake -DGTEST_LINKED_AS_SHARED_LIBRARY=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang-cl -DCMAKE_CXX_COMPILER=clang-cl -G Ninja -B build
+        run: |
+          cmake -DGTEST_LINKED_AS_SHARED_LIBRARY=ON \
+                -DCMAKE_BUILD_TYPE=Release \
+                -DCMAKE_C_COMPILER="C:\Program Files\LLVM\bin\clang.exe" \
+                -DCMAKE_CXX_COMPILER="C:\Program Files\LLVM\bin\clang++.exe" \
+                -G Ninja \
+                -B build
 
       - name: Configure CMake for Windows + MSVC
         if: matrix.os == 'windows-latest' && matrix.compiler == 'MSVC'
