--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,8 +49,8 @@ jobs:
         run: |
           cmake "-DGTEST_LINKED_AS_SHARED_LIBRARY=ON" `
                 "-DCMAKE_BUILD_TYPE=Release" `
-                "-DCMAKE_C_COMPILER="C:\Program Files\LLVM\bin\clang.exe" `
-                "-DCMAKE_CXX_COMPILER="C:\Program Files\LLVM\bin\clang++.exe" `
+                "-DCMAKE_C_COMPILER=`"C:\Program Files\LLVM\bin\clang.exe`"" `
+                "-DCMAKE_CXX_COMPILER=`"C:\Program Files\LLVM\bin\clang++.exe`"" `
                 "-G Ninja" `
                 "-B build"
 
