--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Configure CMake for Windows + clang
         if: matrix.os == 'windows-latest' && matrix.compiler == 'clang'
         run: |
-          cmake_args = @(
+          $cmake_args = @(
             "-DGTEST_LINKED_AS_SHARED_LIBRARY=ON",
             "-DCMAKE_BUILD_TYPE=Release",
             "-DCMAKE_C_COMPILER='C:\Program Files\LLVM\bin\clang.exe'",
