--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,7 @@ jobs:
         if: matrix.os == 'windows-latest' && matrix.compiler == 'clang'
         run: |
           $args = (
+            "-DGTEST_CREATE_SHARED_LIBRARY=ON",
             "-DGTEST_LINKED_AS_SHARED_LIBRARY=ON",
             "-DCMAKE_BUILD_TYPE=Release",
             "-DCMAKE_C_COMPILER=`"C:\Program Files\LLVM\bin\clang.exe`"",
