--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 option(BUILD_SHARED "Build as shared library" ON)
 
 if(MSVC)
-  add_compile_options(/Wall)
+  add_compile_options(/w /WX)
 else()
   add_compile_options(-Wall -Wextra -Wpedantic -Werror)
 endif()
