--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,13 +51,14 @@ jobs:
             "-DCMAKE_C_COMPILER=`"C:\Program Files\LLVM\bin\clang.exe`"",
             "-DCMAKE_CXX_COMPILER=`"C:\Program Files\LLVM\bin\clang++.exe`"",
             "-G Ninja",
+            "-S .",
             "-B build")
           $args = $args -join ' '
           cmake $args
 
       - name: Configure CMake for Windows + MSVC
         if: matrix.os == 'windows-latest' && matrix.compiler == 'MSVC'
-        run: cmake -DCMAKE_BUILD_TYPE=Release -B build
+        run: cmake -DCMAKE_BUILD_TYPE=Release -S . -B build
 
       - name: Build
         run: cmake --build build
