--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -28,18 +28,18 @@ jobs:
         if: matrix.compiler == 'clang'
         run: |
           $args = (
-            "-DCMAKE_BUILD_TYPE=`"Release`"",
+            "-DCMAKE_BUILD_TYPE=Release",
             "-DCMAKE_C_COMPILER=`"C:\Program Files\LLVM\bin\clang.exe`"",
             "-DCMAKE_CXX_COMPILER=`"C:\Program Files\LLVM\bin\clang++.exe`"",
             "-G Ninja",
             "-S .",
             "-B build")
           $args = $args -join ' '
-          cmake $args
+          Invoke-Expression "cmake $args"
 
       - name: Configure CMake for MSVC
         if: matrix.compiler == 'MSVC'
-        run: cmake -DCMAKE_BUILD_TYPE="Release" -S . -B build
+        run: cmake -DCMAKE_BUILD_TYPE=Release -S . -B build
 
       - name: Build
         run: cmake --build build
