--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -29,8 +29,8 @@ jobs:
         run: |
           $args = (
             "-DCMAKE_BUILD_TYPE=Release",
-            "-DCMAKE_C_COMPILER=`"C:\Program Files\LLVM\bin\clang.exe`"",
-            "-DCMAKE_CXX_COMPILER=`"C:\Program Files\LLVM\bin\clang++.exe`"",
+            "-DCMAKE_C_COMPILER=`"C:\\Program Files\\LLVM\\bin\\clang.exe`"",
+            "-DCMAKE_CXX_COMPILER=`"C:\\Program Files\\LLVM\\bin\\clang++.exe`"",
             "-G Ninja",
             "-S .",
             "-B build")
