--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -28,6 +28,9 @@ jobs:
         if: matrix.compiler == 'clang'
         run: |
           $args = (
+            "-DCMAKE_C_COMPILER=clang",
+            "-DCMAKE_CXX_COMPILER=clang++",
+            "-G Ninja",
             "-S .",
             "-B build")
           $args = $args -join ' '
