Remove warnings as errors for all Windows builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,11 @@ option(BUILD_SHARED "Build as shared library" ON)
 if(MSVC)
   add_compile_options(/w /WX)
 else()
-  add_compile_options(-Wall -Wextra -Wpedantic -Werror)
+  if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+    add_compile_options(-Wall -Wextra -Wpedantic)
+  else()
+    add_compile_options(-Wall -Wextra -Wpedantic -Werror)
+  endif()
 endif()
 
 add_subdirectory(src)
