Only install "public" headers

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,22 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 
-set(HEADERS
-    # cmake-format: sort
-    functions/functions.h
-    functions/node_acos.h
-    functions/node_add.h
-    functions/node_asin.h
-    functions/node_atan.h
-    functions/node_cos.h
-    functions/node_div.h
-    functions/node_mul.h
-    functions/node_sin.h
-    functions/node_sub.h
-    functions/node_tan.h
-    node.h
-    node_var.h
-    util.h
-    var.h)
+set(HEADERS # cmake-format: sort
+            functions/functions.h util.h var.h)
 
 set(SOURCES
     # cmake-format: sort
@@ -38,14 +23,16 @@ set(SOURCES
 
 add_library(cascade_static STATIC ${SOURCES})
 set_target_properties(cascade_static PROPERTIES OUTPUT_NAME cascade_static)
-target_include_directories(cascade_static
-                           PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/functions)
+target_include_directories(
+  cascade_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
+                        ${CMAKE_CURRENT_SOURCE_DIR}/functions)
 
 if(BUILD_SHARED)
   add_library(cascade_shared SHARED ${SOURCES})
   set_target_properties(cascade_shared PROPERTIES OUTPUT_NAME cascade_shared)
-  target_include_directories(cascade_shared
-                             PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+  target_include_directories(
+    cascade_shared PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
+                          ${CMAKE_CURRENT_SOURCE_DIR}/functions)
 endif()
 
 install(
