--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,7 +30,12 @@ enable_testing()
 
 target_include_directories(run_tests PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-target_link_libraries(run_tests cascade_static GTest::gtest_main)
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CODE_COVERAGE)
+  target_link_libraries(run_tests cascade_static GTest::gtest_main -lgcov
+                        --coverage)
+else()
+  target_link_libraries(run_tests cascade_static GTest::gtest_main)
+endif()
 
 include(GoogleTest)
 gtest_discover_tests(run_tests)
