--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -40,4 +40,4 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: marcromani/cascade
-          exclude: ./build/tests
+          exclude: ./build/tests tests
