--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -42,5 +42,6 @@ jobs:
         if: matrix.os == 'ubuntu-22.04' && matrix.compiler == 'gcc'
         uses: codecov/codecov-action@v4.0.1
         with:
+          gcov: false
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: marcromani/cascade
