Create separate target lib with coverage for tests. Avoids linking problems once libs are installed

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -33,7 +33,8 @@ target_include_directories(run_tests PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
    AND CMAKE_CXX_COMPILER_ID STREQUAL "GNU"
    AND CODE_COVERAGE)
-  target_link_libraries(run_tests cascade_static GTest::gtest_main -lgcov)
+  target_link_libraries(run_tests cascade_with_coverage GTest::gtest_main
+                        -lgcov)
 else()
   target_link_libraries(run_tests cascade_static GTest::gtest_main)
 endif()
