--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,26 +1,34 @@
 cmake_minimum_required(VERSION 3.16)
 
 set(HEADERS # cmake-format: sort
-            cascade.h functions/functions.h var.h)
+            cascade.h functions/functions.h tensor.h var.h)
 
 set(SOURCES # cmake-format: sort
-            node.cpp node_var.cpp util.cpp var.cpp)
+            node.cpp node_var.cpp tensor.cpp util.cpp var.cpp)
 
 file(GLOB FUNCTION_SOURCES functions/*.cpp)
 list(APPEND SOURCES ${FUNCTION_SOURCES})
 
+set(CUDA_SOURCES # cmake-format: sort
+                 tensor.cu)
+list(APPEND SOURCES ${CUDA_SOURCES})
+
+find_package(CUDA REQUIRED)
+
 add_library(cascade_static STATIC ${SOURCES})
 set_target_properties(cascade_static PROPERTIES OUTPUT_NAME cascade_static)
 target_include_directories(
-  cascade_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
-                        ${CMAKE_CURRENT_SOURCE_DIR}/functions)
+  cascade_static
+  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/functions
+         ${CUDA_INCLUDE_DIRS})
 
 if(BUILD_SHARED)
   add_library(cascade_shared SHARED ${SOURCES})
   set_target_properties(cascade_shared PROPERTIES OUTPUT_NAME cascade_shared)
   target_include_directories(
-    cascade_shared PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
-                          ${CMAKE_CURRENT_SOURCE_DIR}/functions)
+    cascade_shared
+    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/functions
+           ${CUDA_INCLUDE_DIRS})
 endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
@@ -30,8 +38,9 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux"
   set_target_properties(cascade_with_coverage PROPERTIES OUTPUT_NAME
                                                          cascade_with_coverage)
   target_include_directories(
-    cascade_with_coverage PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
-                                 ${CMAKE_CURRENT_SOURCE_DIR}/functions)
+    cascade_with_coverage
+    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/functions
+           ${CUDA_INCLUDE_DIRS})
   target_compile_options(cascade_with_coverage PRIVATE -fprofile-arcs
                                                        -ftest-coverage)
 endif()
